--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
       <div class="form-item">
         <label for="ttl-id">Total Id:</label>
-        <input type="text" id="ttl-id" placeholder="Enter ID" maxlength="4">
+        <input type="text" id="ttl-id" placeholder="Total Id" maxlength="4">
       </div>
     </div>
 
