--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           <option disabled selected>Select</option>
           <option>1Sec Mail</option>
           <option>Temp Mail</option>
+          <option>Any Mail</option>
         </select>
       </div>
     </div>
