--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <div class="popup">
   <!--  <span class="material-symbols-outlined">done</span> -->
     <p>Your response has been submitted!</p>
-    <button type="button">OK</button>
+    <button type="button">OK Thanks!</button>
 </div>
 
 <!-- New Alert Popup -->
