--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <label for="2fa-cookie">2FA-Cook</label>
         <select id="2fa-cookie">
           <option disabled selected>Select</option>
-          <option>2FA</option>
-          <option>Cookies</option>
+          <option value="2FA">2FA</option>
+          <option value="Cookies">Cookies</option>
         </select>
       </div>
       <div class="form-item">
