--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
           <option disabled selected>Select</option>
           <option>Facebook</option>
           <option>Gmail</option>
-          <option>Telegram</option>
-          <option>Whatsapp</option>
-          <option>Inatagram</option>
+          <option disabled>Telegram</option>
+          <option disabled>Whatsapp</option>
+          <option disabled>Inatagram</option>
         </select>
       </div>
       <div class="form-item">
