--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
         <select id="account-type" required>
           <option disabled selected>Select</option>
           <option>Facebook</option>
-          <option>Gmail</option>
+          <option disabled>Gmail</option>
           <option disabled>Telegram</option>
           <option disabled>Whatsapp</option>
           <option disabled>Inatagram</option>
+          <option disabled>Tweeter</option>
         </select>
       </div>
       <div class="form-item">
