--- a/success.html
+++ b/success.html
@@ -109,7 +109,7 @@
             <span><strong>Time:</strong> <span id="openTime"></span></span>
         </div>
 
-        <a href="index.html"><button>Close</button></a>
+        <a href="index.html"><button>Thanks 🎉</button></a>
     </div>
 
     <script>
